--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
 <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
-<!-- Theme JavaScript -->
+<!--  JavaScript -->
 <script src="js/creative.min.js"></script>
 </body>
 </html>
